--- a/about-us.html
+++ b/about-us.html
@@ -18,7 +18,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- FONTAWESOME CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" >
 </head>
 
 <body>
@@ -135,7 +135,7 @@
             <div class="row">
                 <div class="col">
                     <div class="plan-card">
-                        <img src="images/perfume-bottle.png">
+                        <img src="images/perfume-bottle.png" alt="perfumebottles">
 
                         <div class="plan-details">
                             <h2 class="title">Quality</h2>
@@ -146,7 +146,7 @@
 
                 <div class="col">
                     <div class="plan-card">
-                        <img src="images/satisfaction.png">
+                        <img src="images/satisfaction.png" alt="satisfactions">
 
                         <div class="plan-details">
                             <h2 class="title">Customer Satisfaction</h2>
@@ -157,7 +157,7 @@
 
                 <div class="col">
                     <div class="plan-card">
-                        <img src="images/innov.png">
+                        <img src="images/innov.png" alt="innovations">
 
                         <div class="plan-details">
                             <h2 class="title">Innovation</h2>
@@ -204,7 +204,7 @@ It includes an email address for general inquiries and links to the company's so
             <!-- Section for links to other pages and logo -->
             <div class="links">
                 <a href="index.html" class="logo">
-                    <img src="images/Logo.png">
+                    <img src="images/Logo.png" alt="logo">
                 </a>
                 <ul>
                     <li><a href="index.html">Home</a></li>
